fixed bugs and updated structure

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       </a>
 
       <nav class="nav page-header__nav">
-        <ul class="nav__list list-reset">
+        <ul class="nav__list ">
           <li class="nav__item">
             <a href="#about" class="link nav__link">О компании</a>
           </li>
@@ -94,7 +94,7 @@
 
     <section id="features" class="features">
       <h2 class="visually-hidden">Наши преимущества</h2>
-      <dl class="features__list container list-reset">
+      <dl class="features__list container ">
         <div class="feature features__item" data-reveal="true">
           <dt class="feature__term">5</dt>
           <dd class="feature__desc">Лет опыта</dd>
@@ -113,9 +113,9 @@
     <section id="portfolio" class="portfolio">
       <div class="container portfolio__container">
         <h2 class="title portfolio__title" data-reveal="true">Наши работы</h2>
-        <ul class="portfolio-cases list-reset">
+        <ul class="portfolio-cases ">
           <li class="portfolio-case portfolio-cases__case" tabindex="0" data-reveal="true">
-            <img src="images/portfolio/portfolio-case-1.jpg" alt="Квартира студия 30 кв.м." class="portfolio-case__image">
+            <img src="images/portfolio/portfolio-case-1.jpg" alt="Интерьер квартиры-студии 30 кв.м." class="portfolio-case__image">
             <div class="portfolio-case__about">
               <h3 class="portfolio-case__title">Квартира-студия 30 кв.м.</h3>
               <p class="desc portfolio-case__desc">
@@ -125,7 +125,7 @@
             </div>
           </li>
           <li class="portfolio-case portfolio-cases__case" tabindex="0" data-reveal="true">
-            <img src="images/portfolio/portfolio-case-2.jpg" alt="Пентхаус в светлых тонах" class="portfolio-case__image">
+            <img src="images/portfolio/portfolio-case-2.jpg" alt="Интерьер пентхауса в светлых тонах" class="portfolio-case__image">
             <div class="portfolio-case__about">
               <h3 class="portfolio-case__title">Пентхаус в светлых тонах</h3>
               <p class="desc portfolio-case__desc">
@@ -135,7 +135,7 @@
             </div>
           </li>
           <li class="portfolio-case portfolio-cases__case" tabindex="0" data-reveal="true">
-            <img src="images/portfolio/portfolio-case-3.jpg" alt="Квартира-студия с яркими акцентами" class="portfolio-case__image">
+            <img src="images/portfolio/portfolio-case-3.jpg" alt="Интерьер квартиры-студии с яркими акцентами" class="portfolio-case__image">
             <div class="portfolio-case__about">
               <h3 class="portfolio-case__title">Квартира-студия с яркими акцентами</h3>
               <p class="desc portfolio-case__desc">
@@ -145,7 +145,7 @@
             </div>
           </li>
           <li class="portfolio-case portfolio-cases__case" tabindex="0" data-reveal="true">
-            <img src="images/portfolio/portfolio-case-4.jpg" alt="Ванная в скандинавском стиле" class="portfolio-case__image">
+            <img src="images/portfolio/portfolio-case-4.jpg" alt="Интерьер ванной в скандинавском стиле" class="portfolio-case__image">
             <div class="portfolio-case__about">
               <h3 class="portfolio-case__title">Ванная в скандинавском стиле</h3>
               <p class="desc portfolio-case__desc">
@@ -164,7 +164,7 @@
       <div class="container team__container">
         <h2 class="title team__title" data-reveal="true">Команда</h2>
 
-        <ul class="team__list list-reset">
+        <ul class="team__list ">
           <li class="team-card team__item">
             <img src="images/team/team-1.jpg" alt="Маша – главный дизайнер" class="team-card__image">
             <p class="desc team-card__desc">
@@ -193,7 +193,7 @@
         <section id="process" class="process">
             <h2 class="title process__title" data-reveal="true">Как мы работаем</h2>
 
-            <ol class="process__list list-reset">
+            <ol class="process__list ">
               <li class="process-card process__item">
                 <span class="process-card__step"></span>
                 <p class="desc process-card__desc">
